Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -741,9 +741,9 @@
   "pli-tv-kd14:14.5.31": "What are the three wholesome roots of accusations? ",
   "pli-tv-kd14:14.5.32": "It may be that monks, because of non-greed, non-ill will, and non-delusion, accuse a monk of ",
   "pli-tv-kd14:14.5.33": "failure in morality, conduct, view, or livelihood. ",
-  "pli-tv-kd14:14.5.35": "How is the body a root of legal issues arising from accusations? ",
+  "pli-tv-kd14:14.5.35": "How’s the body a root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.36": "It may be that someone is ugly, unsightly, a dwarf, sickly, blind in one eye, crooked-limbed, lame, or paralyzed, and they blame him for that. ",
-  "pli-tv-kd14:14.5.38": "How is speech a root of legal issues arising from accusations? ",
+  "pli-tv-kd14:14.5.38": "How’s speech a root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.39": "It may be that someone is difficult to correct, or he stutters or dribbles while speaking, and they blame him for that. ",
   "pli-tv-kd14:14.6.1": "(2c) What is the root of legal issues arising from offenses? ",
   "pli-tv-kd14:14.6.2": "There are six origins of offenses that in turn are the root of legal issues arising from offenses. ",
