Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -745,7 +745,7 @@
   "pli-tv-kd14:14.5.36": "It may be that someone is ugly, unsightly, a dwarf, sickly, blind in one eye, crooked-limbed, lame, or paralyzed, and they blame him for that. ",
   "pli-tv-kd14:14.5.38": "How’s speech a root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.39": "It may be that someone is difficult to correct, or he stutters or dribbles while speaking, and they blame him for that. ",
-  "pli-tv-kd14:14.6.1": "(2c) What is the root of legal issues arising from offenses? ",
+  "pli-tv-kd14:14.6.1": "(2c) What’s the root of legal issues arising from offenses? ",
   "pli-tv-kd14:14.6.2": "There are six origins of offenses that in turn are the root of legal issues arising from offenses. ",
   "pli-tv-kd14:14.6.3": "There are offenses that originate from the body, but not from speech or the mind. ",
   "pli-tv-kd14:14.6.4": "There are offenses that originate from speech, but not from the body or the mind. ",
@@ -753,7 +753,7 @@
   "pli-tv-kd14:14.6.6": "There are offenses that originate from the body and the mind, but not from speech. ",
   "pli-tv-kd14:14.6.7": "There are offenses that originate from speech and the mind, but not from the body. ",
   "pli-tv-kd14:14.6.8": "There are offenses that originate from the body, speech, and the mind. ",
-  "pli-tv-kd14:14.7.1": "(2d) What is the root of legal issues arising from business? ",
+  "pli-tv-kd14:14.7.1": "(2d) What’s the root of legal issues arising from business? ",
   "pli-tv-kd14:14.7.2": "There is one root of legal issues arising from business: ",
   "pli-tv-kd14:14.7.3": "the Sangha. ",
   "pli-tv-kd14:14.8.1": "(3a) Is a legal issue arising from a dispute wholesome, unwholesome, or indeterminate? ",
@@ -762,9 +762,9 @@
   "pli-tv-kd14:14.8.4": "It may be that monks dispute with a wholesome mind, saying, ",
   "pli-tv-kd14:14.8.5": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.6": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
-  "pli-tv-kd14:14.8.7": "In regard to this, whatever quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife there is—",
+  "pli-tv-kd14:14.8.7": "In regard to this, whatever there is of quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife—",
   "pli-tv-kd14:14.8.8": "this is called a wholesome legal issue arising from a dispute. ",
-  "pli-tv-kd14:14.8.9": "What is an unwholesome legal issue arising from a dispute? ",
+  "pli-tv-kd14:14.8.9": "What’s an unwholesome legal issue arising from a dispute? ",
   "pli-tv-kd14:14.8.10": "It may be that monks dispute with an unwholesome mind, saying, ",
   "pli-tv-kd14:14.8.11": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.12": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
