Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -766,11 +766,11 @@
   "pli-tv-kd14:14.8.8": "this is called a wholesome legal issue arising from a dispute. ",
   "pli-tv-kd14:14.8.9": "What’s an unwholesome legal issue arising from a dispute? ",
   "pli-tv-kd14:14.8.10": "It may be that monks dispute with an unwholesome mind, saying, ",
-  "pli-tv-kd14:14.8.11": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
+  "pli-tv-kd14:14.8.11": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.12": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
-  "pli-tv-kd14:14.8.13": "In regard to this, whatever quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife there is—",
+  "pli-tv-kd14:14.8.13": "In regard to this, whatever there is of quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife—",
   "pli-tv-kd14:14.8.14": "this is called an unwholesome legal issue arising from a dispute. ",
-  "pli-tv-kd14:14.8.15": "What is an indeterminate legal issue arising from a dispute? ",
+  "pli-tv-kd14:14.8.15": "What’s an indeterminate legal issue arising from a dispute? ",
   "pli-tv-kd14:14.8.16": "It may be that monks dispute with an indeterminate mind, saying, ",
   "pli-tv-kd14:14.8.17": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.18": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
