Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -772,16 +772,16 @@
   "pli-tv-kd14:14.8.14": "this is called an unwholesome legal issue arising from a dispute. ",
   "pli-tv-kd14:14.8.15": "What’s an indeterminate legal issue arising from a dispute? ",
   "pli-tv-kd14:14.8.16": "It may be that monks dispute with an indeterminate mind, saying, ",
-  "pli-tv-kd14:14.8.17": "‘This is the Teaching’, or ‘This is contrary to the Teaching’ … ",
+  "pli-tv-kd14:14.8.17": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.8.18": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
-  "pli-tv-kd14:14.8.19": "In regard to this, whatever quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife there is—",
+  "pli-tv-kd14:14.8.19": "In regard to this, whatever there is of quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife—",
   "pli-tv-kd14:14.8.20": "this is called an indeterminate legal issue arising from a dispute. ",
   "pli-tv-kd14:14.9.1": "(3b) Is a legal issue arising from an accusation wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.9.2": "A legal issue arising from an accusation may be wholesome, unwholesome, or indeterminate. ",
-  "pli-tv-kd14:14.9.3": "What is a wholesome legal issue arising from an accusation? ",
+  "pli-tv-kd14:14.9.3": "What’s a wholesome legal issue arising from an accusation? ",
   "pli-tv-kd14:14.9.4": "It may be that monks with wholesome minds accuse a monk ",
-  "pli-tv-kd14:14.9.5": "of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
-  "pli-tv-kd14:14.9.6": "In regard to this, whatever accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation there is—",
+  "pli-tv-kd14:14.9.5": "of failure in morality, conduct, view, or livelihood. ",
+  "pli-tv-kd14:14.9.6": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
   "pli-tv-kd14:14.9.7": "this is called a wholesome legal issue arising from an accusation. ",
   "pli-tv-kd14:14.9.8": "What is an unwholesome legal issue arising from an accusation? ",
   "pli-tv-kd14:14.9.9": "It may be that monks with unwholesome minds accuse a monk ",
