--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -783,9 +783,9 @@
   "pli-tv-kd14:14.9.5": "of failure in morality, conduct, view, or livelihood. ",
   "pli-tv-kd14:14.9.6": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
   "pli-tv-kd14:14.9.7": "this is called a wholesome legal issue arising from an accusation. ",
-  "pli-tv-kd14:14.9.8": "What is an unwholesome legal issue arising from an accusation? ",
+  "pli-tv-kd14:14.9.8": "What’s an unwholesome legal issue arising from an accusation? ",
   "pli-tv-kd14:14.9.9": "It may be that monks with unwholesome minds accuse a monk ",
-  "pli-tv-kd14:14.9.10": "of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
+  "pli-tv-kd14:14.9.10": "of failure in morality,  conduct, view, or livelihood. ",
   "pli-tv-kd14:14.9.11": "In regard to this, whatever accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation there is—",
   "pli-tv-kd14:14.9.12": "this is called an unwholesome legal issue arising from an accusation. ",
   "pli-tv-kd14:14.9.13": "What is an indeterminate legal issue arising from an accusation? ",
