Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -786,12 +786,12 @@
   "pli-tv-kd14:14.9.8": "What’s an unwholesome legal issue arising from an accusation? ",
   "pli-tv-kd14:14.9.9": "It may be that monks with unwholesome minds accuse a monk ",
   "pli-tv-kd14:14.9.10": "of failure in morality,  conduct, view, or livelihood. ",
-  "pli-tv-kd14:14.9.11": "In regard to this, whatever accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation there is—",
+  "pli-tv-kd14:14.9.11": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
   "pli-tv-kd14:14.9.12": "this is called an unwholesome legal issue arising from an accusation. ",
-  "pli-tv-kd14:14.9.13": "What is an indeterminate legal issue arising from an accusation? ",
+  "pli-tv-kd14:14.9.13": "What’s an indeterminate legal issue arising from an accusation? ",
   "pli-tv-kd14:14.9.14": "It may be that monks with indeterminate minds accuse a monk ",
-  "pli-tv-kd14:14.9.15": "of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
-  "pli-tv-kd14:14.9.16": "In regard to this, whatever accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation there is—",
+  "pli-tv-kd14:14.9.15": "of failure in morality, conduct, view, or livelihood. ",
+  "pli-tv-kd14:14.9.16": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
   "pli-tv-kd14:14.9.17": "this is called an indeterminate legal issue arising from an accusation. ",
   "pli-tv-kd14:14.9.18": "(3c) Is a legal issue arising from an offense wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.10.1": "A legal issue arising from an offense may be unwholesome or indeterminate. ",
