Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -796,7 +796,7 @@
   "pli-tv-kd14:14.9.18": "(3c) Is a legal issue arising from an offense wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.10.1": "A legal issue arising from an offense may be unwholesome or indeterminate. ",
   "pli-tv-kd14:14.10.2": "There are no wholesome legal issues arising from an offense. ",
-  "pli-tv-kd14:14.10.3": "What is an unwholesome legal issue arising from an offense? ",
+  "pli-tv-kd14:14.10.3": "What’s an unwholesome legal issue arising from an offense? ",
   "pli-tv-kd14:14.10.4": "When one transgresses, knowing, perceiving, having intended, having decided—",
   "pli-tv-kd14:14.10.5": "this is called an unwholesome legal issue arising from an offense. ",
   "pli-tv-kd14:14.10.6": "What is an indeterminate legal issue arising from an offense? ",
