Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -799,12 +799,12 @@
   "pli-tv-kd14:14.10.3": "What’s an unwholesome legal issue arising from an offense? ",
   "pli-tv-kd14:14.10.4": "When one transgresses, knowing, perceiving, having intended, having decided—",
   "pli-tv-kd14:14.10.5": "this is called an unwholesome legal issue arising from an offense. ",
-  "pli-tv-kd14:14.10.6": "What is an indeterminate legal issue arising from an offense? ",
+  "pli-tv-kd14:14.10.6": "What’s an indeterminate legal issue arising from an offense? ",
   "pli-tv-kd14:14.10.7": "When one transgresses, not knowing, not perceiving, not having intended, not having decided—",
   "pli-tv-kd14:14.10.8": "this is called an indeterminate legal issue arising from an offense. ",
   "pli-tv-kd14:14.11.1": "(3d) Is a legal issue arising from business wholesome, unwholesome, or indeterminate? ",
   "pli-tv-kd14:14.11.2": "A legal issue arising from business may be wholesome, unwholesome, or indeterminate. ",
-  "pli-tv-kd14:14.11.3": "What is a wholesome legal issue arising from business? ",
+  "pli-tv-kd14:14.11.3": "What’s a wholesome legal issue arising from business? ",
   "pli-tv-kd14:14.11.4": "When the Sangha does a legal procedure with a wholesome mind—",
   "pli-tv-kd14:14.11.5": "whether a procedure consisting of getting permission, a procedure consisting of one motion, a procedure consisting of one motion and one announcement, or a procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.11.6": "this is called a wholesome legal issue arising from business. ",
