Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -808,11 +808,11 @@
   "pli-tv-kd14:14.11.4": "When the Sangha does a legal procedure with a wholesome mind—",
   "pli-tv-kd14:14.11.5": "whether a procedure consisting of getting permission, a procedure consisting of one motion, a procedure consisting of one motion and one announcement, or a procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.11.6": "this is called a wholesome legal issue arising from business. ",
-  "pli-tv-kd14:14.11.7": "What is an unwholesome legal issue arising from business? ",
+  "pli-tv-kd14:14.11.7": "What’s an unwholesome legal issue arising from business? ",
   "pli-tv-kd14:14.11.8": "When the Sangha does a legal procedure with an unwholesome mind—",
   "pli-tv-kd14:14.11.9": "whether a procedure consisting of getting permission, a procedure consisting of one motion, a procedure consisting of one motion and one announcement, or a procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.11.10": "this is called an unwholesome legal issue arising from business. ",
-  "pli-tv-kd14:14.11.11": "What is an indeterminate legal issue arising from business? ",
+  "pli-tv-kd14:14.11.11": "What’s an indeterminate legal issue arising from business? ",
   "pli-tv-kd14:14.11.12": "When the Sangha does a legal procedure with an indeterminate mind—",
   "pli-tv-kd14:14.11.13": "whether a procedure consisting of getting permission, a procedure consisting of one motion, a procedure consisting of one motion and one announcement, or a procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.11.14": "this is called an indeterminate legal issue arising from business. ",
