--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd12_translation-en-brahmali.json
@@ -543,7 +543,7 @@
   "pli-tv-kd12:9.1.27.7": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd12:9.1.27.8": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd12:9.1.27.9": "He shouldn’t cancel the invitation of a regular monk. ",
-  "pli-tv-kd12:9.1.27.10": "He shouldn’t speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd12:9.1.27.10": "He shouldn’t direct a regular monk. ",
   "pli-tv-kd12:9.1.27.11": "He shouldn’t criticize a regular monk. ",
   "pli-tv-kd12:9.1.27.12": "He shouldn’t ask a regular monk for permission to accuse him of an offense. ",
   "pli-tv-kd12:9.1.27.13": "He shouldn’t accuse a regular monk of an offense. ",
