--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -34,7 +34,7 @@
   "sn22.85:8.1": "„Was denkst du, werter Yamaka? ",
   "sn22.85:8.2": "Siehst du den Klargewordenen als Form an?“ ",
   "sn22.85:8.3": "„Nein, werter Freund.“ ",
-  "sn22.85:8.4": "„Siehst du den Klargewordenen als Gefühl an?“ … ",
+  "sn22.85:8.4": "„Siehst du den Klargewordenen als Gefühl … ",
   "sn22.85:8.6": "„Siehst du den Klargewordenen als Wahrnehmung an?“ … ",
   "sn22.85:8.7": "„Siehst du den Klargewordenen als Entscheidungen an?“ … ",
   "sn22.85:8.8": "„Siehst du den Klargewordenen als Bewusstsein an?“ ",
