--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "sn22.85:8.4": "„Siehst du den Klargewordenen als Gefühl … ",
   "sn22.85:8.6": "als Wahrnehmung … ",
   "sn22.85:8.7": "als Entscheidungen … ",
-  "sn22.85:8.8": "„Siehst du den Klargewordenen als Bewusstsein an?“ ",
+  "sn22.85:8.8": "als Bewusstsein an?“ ",
   "sn22.85:8.9": "„Nein, werter Freund.“ ",
   "sn22.85:9.1": "„Was denkst du, werter Yamaka? ",
   "sn22.85:9.2": "Siehst du den Klargewordenen als in der Form an?“ ",
