--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn22.85:13.15": "Was Leiden ist, hat aufgehört und ist zu Ede gegangen.‘ ",
   "sn22.85:13.16": "So würde ich eine solche Frage beantworten.“ ",
   "sn22.85:14.1": "„Gut, gut, werter Yamaka! ",
-  "sn22.85:14.2": "Nun, ich will dir ein Gleichnis geben, um die Bedeutung noch klarer zu machen. "
+  "sn22.85:14.2": "Nun, ich will dir ein Gleichnis geben, um die Bedeutung noch klarer zu machen. ",
+  "sn22.85:14.3": "Angenommen, da wäre ein Hausbesitzer oder der Sohn eines Hausbesitzers. Er wäre reich, hätte viel Besitz und Vermögen "
 }
