--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -83,5 +83,6 @@
   "sn22.85:14.2": "Nun, ich will dir ein Gleichnis geben, um die Bedeutung noch klarer zu machen. ",
   "sn22.85:14.3": "Angenommen, da wäre ein Hausbesitzer oder der Sohn eines Hausbesitzers. Er wäre reich, hätte viel Besitz und Vermögen ",
   "sn22.85:14.4": "und eine Leibwache zu seinem Schutz. ",
-  "sn22.85:14.5": "Und es käme ein Mensch, der ihm schaden, ihn verletzen und bedrohen und ihm das Leben nehmen wollte. "
+  "sn22.85:14.5": "Und es käme ein Mensch, der ihm schaden, ihn verletzen und bedrohen und ihm das Leben nehmen wollte. ",
+  "sn22.85:14.6": "Der dächte: "
 }
