Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -85,5 +85,6 @@
   "sn22.85:14.4": "und eine Leibwache zu seinem Schutz. ",
   "sn22.85:14.5": "Und es käme ein Mensch, der ihm schaden, ihn verletzen und bedrohen und ihm das Leben nehmen wollte. ",
   "sn22.85:14.6": "Der dächte: ",
-  "sn22.85:14.7": "‚Dieser Hausbesitzer oder Sohn eines Hausbesitzers ist reich, hat viel Besitz und Vermögen "
+  "sn22.85:14.7": "‚Dieser Hausbesitzer oder Sohn eines Hausbesitzers ist reich, hat viel Besitz und Vermögen ",
+  "sn22.85:14.8": "und eine Leibwache zu seinem Schutz. "
 }
