--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "sn22.85:14.7": "‚Dieser Hausbesitzer oder Sohn eines Hausbesitzers ist reich, hat viel Besitz und Vermögen ",
   "sn22.85:14.8": "und eine Leibwache zu seinem Schutz. ",
   "sn22.85:14.9": "Es wird nicht leicht sein, ihm mit Gewalt das Leben zu nehmen. ",
-  "sn22.85:14.10": "Warum werde ich nicht vertraut mit ihm und nehme ihm dann das Leben?“ "
+  "sn22.85:14.10": "Warum werde ich nicht vertraut mit ihm und nehme ihm dann das Leben?“ ",
+  "sn22.85:14.11": "Und er geht zu diesem Hausbesitzer oder Sohn eines Hausbesitzers und sagt: "
 }
