--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -91,5 +91,5 @@
   "sn22.85:14.10": "Warum werde ich nicht vertraut mit ihm und nehme ihm dann das Leben?“ ",
   "sn22.85:14.11": "Und er geht zu diesem Hausbesitzer oder Sohn eines Hausbesitzers und sagt: ",
   "sn22.85:14.12": "‚Herr, ich möchte dir dienen.‘ ",
-  "sn22.85:14.13": "Und er würde diesem Hausbesitzer oder Sohn eines Hausbesitzers dienen. "
+  "sn22.85:14.13": "Und er diente diesem Hausbesitzer oder Sohn eines Hausbesitzers. "
 }
