Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -92,5 +92,6 @@
   "sn22.85:14.11": "Und er geht zu diesem Hausbesitzer oder Sohn eines Hausbesitzers und sagt: ",
   "sn22.85:14.12": "‚Herr, ich möchte dir dienen.‘ ",
   "sn22.85:14.13": "Und er diente diesem Hausbesitzer oder Sohn eines Hausbesitzers. ",
-  "sn22.85:14.14": "Er würde vor ihm aufstehen und nach ihm zu Bett gehen. Er wäre zuvorkommend, zeigte sich liebenswert und redete höflich. "
+  "sn22.85:14.14": "Er würde vor ihm aufstehen und nach ihm zu Bett gehen. Er wäre zuvorkommend, zeigte sich liebenswert und redete höflich. ",
+  "sn22.85:14.15": "Der Hausbesitzer oder Sohn eines Hausbesitzers würde ihn als Freund "
 }
