--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "sn22.85:14.12": "‚Herr, ich möchte dir dienen.‘ ",
   "sn22.85:14.13": "Und er diente diesem Hausbesitzer oder Sohn eines Hausbesitzers. ",
   "sn22.85:14.14": "Er würde vor ihm aufstehen und nach ihm zu Bett gehen. Er wäre zuvorkommend, zeigte sich liebenswert und redete höflich. ",
-  "sn22.85:14.15": "Der Hausbesitzer oder Sohn eines Hausbesitzers würde ihn als Freund "
+  "sn22.85:14.15": "Der Hausbesitzer oder Sohn eines Hausbesitzers würde ihn als Freund ",
+  "sn22.85:14.16": "und Gefährten betrachten "
 }
