--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -95,5 +95,6 @@
   "sn22.85:14.14": "Er würde vor ihm aufstehen und nach ihm zu Bett gehen. Er wäre zuvorkommend, zeigte sich liebenswert und redete höflich. ",
   "sn22.85:14.15": "Der Hausbesitzer oder Sohn eines Hausbesitzers würde ihn als Freund ",
   "sn22.85:14.16": "und Gefährten betrachten ",
-  "sn22.85:14.17": "und würde ihm allmählich vertrauen. "
+  "sn22.85:14.17": "und würde ihm allmählich vertrauen. ",
+  "sn22.85:14.18": "Aber wenn dieser Mensch merkte, "
 }
