--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "sn22.85:14.16": "und Gefährten betrachten ",
   "sn22.85:14.17": "und würde ihm allmählich vertrauen. ",
   "sn22.85:14.18": "Aber wenn dieser Mensch merkte, ",
-  "sn22.85:14.19": "dass er das Vertrauen des Hausbesitzers oder des Sohnes eines Hausbesitzers erlangt hätte, und er wüsste, dass er allein ist, würde er ihm mit einem scharfen Messer das Leben nehmen. "
+  "sn22.85:14.19": "dass er das Vertrauen des Hausbesitzers oder des Sohnes eines Hausbesitzers erlangt hätte, und er wüsste, dass er allein ist, würde er ihm mit einem scharfen Messer das Leben nehmen. ",
+  "sn22.85:15.1": "Was denkst du, werter Yamaka? "
 }
