--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -100,5 +100,6 @@
   "sn22.85:14.19": "dass er das Vertrauen des Hausbesitzers oder des Sohnes eines Hausbesitzers erlangt hätte, und er wüsste, dass er allein ist, würde er ihm mit einem scharfen Messer das Leben nehmen. ",
   "sn22.85:15.1": "Was denkst du, werter Yamaka? ",
   "sn22.85:15.2": "Als dieser Mensch zu dem Hausbesitzer oder Sohn eines Hausbesitzers ging und ihm seine Dienste anbot, ",
-  "sn22.85:15.3": "war er da nicht ein Mörder, "
+  "sn22.85:15.3": "war er da nicht ein Mörder, ",
+  "sn22.85:15.4": "auch wenn dieser nicht wusste, "
 }
