--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -101,5 +101,6 @@
   "sn22.85:15.1": "Was denkst du, werter Yamaka? ",
   "sn22.85:15.2": "Als dieser Mensch zu dem Hausbesitzer oder Sohn eines Hausbesitzers ging und ihm seine Dienste anbot, ",
   "sn22.85:15.3": "war er da nicht ein Mörder, ",
-  "sn22.85:15.4": "auch wenn dieser nicht wusste, "
+  "sn22.85:15.4": "auch wenn dieser nicht wusste, ",
+  "sn22.85:15.5": "dass er sein Mörder war? "
 }
