--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -106,5 +106,6 @@
   "sn22.85:15.6": "Und als er vor ihm aufstand und nach ihm zu Bett ging, als er zuvorkommend war und sich liebenswert zeigte und höflich redete, war er da nicht ein Mörder, ",
   "sn22.85:15.7": "auch wenn dieser nicht wusste, ",
   "sn22.85:15.8": "dass er sein Mörder war? ",
-  "sn22.85:15.9": "Und als er wusste, dass dieser allein war, und er ihm mit einem scharfen Messer das Leben nahm, war er da nicht ein Mörder, "
+  "sn22.85:15.9": "Und als er wusste, dass dieser allein war, und er ihm mit einem scharfen Messer das Leben nahm, war er da nicht ein Mörder, ",
+  "sn22.85:15.10": "auch wenn dieser nicht wusste, "
 }
