--- a/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
@@ -1,5 +1,6 @@
 {
   "an5.257-263:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości doświadczenia drugiej jhāny (...) trzeciej jhāny (...) czwartej jhāny (...) Owocu Wchodzącego w Strumień (...) Owocu Razpowracającego (...) Owocu Niepowracającego (...) Owocu Arahanta.",
   "an5.257-263:1.2": "Których pięciu?",
-  "an5.257-263:1.3": "Skąpstwo w odniesieniu do miejsca przebywania, skąpstwo w odniesieniu do rodziny, skąpstwo w odniesieniu do zysku, skąpstwo w odniesieniu do statusu, skąpstwo w odniesieniu do Dhammy."
+  "an5.257-263:1.3": "Skąpstwo w odniesieniu do miejsca przebywania, skąpstwo w odniesieniu do rodziny, skąpstwo w odniesieniu do zysku, skąpstwo w odniesieniu do statusu, skąpstwo w odniesieniu do Dhammy.",
+  "an5.257-263:1.4": "To jest, mnisi, te  pięć właściwości, bez porzucenia których nie ma możliwości doświadczenia Owocu Arahanta."
 }
