--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "sn22.85:15.9": "Und als er wusste, dass dieser allein war, und er ihm mit einem scharfen Messer das Leben nahm, war er da nicht ein Mörder, ",
   "sn22.85:15.10": "auch wenn dieser nicht wusste, ",
   "sn22.85:15.11": "dass er sein Mörder war?“ ",
-  "sn22.85:15.12": "„Ja, werter Freund.“ "
+  "sn22.85:15.12": "„Ja, werter Freund.“ ",
+  "sn22.85:15.13": "Ebenso hat da ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. "
 }
