--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -113,5 +113,6 @@
   "sn22.85:15.13": "Ebenso hat da ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
   "sn22.85:15.14": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.85:15.15": "Er betrachtet Gefühl als das Selbst … ",
-  "sn22.85:15.16": "Er betrachtet Wahrnehmung als das Selbst … "
+  "sn22.85:15.16": "Er betrachtet Wahrnehmung als das Selbst … ",
+  "sn22.85:15.17": "Er betrachtet Entscheidungen als das Selbst … "
 }
