--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -114,5 +114,6 @@
   "sn22.85:15.14": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.85:15.15": "Er betrachtet Gefühl als das Selbst … ",
   "sn22.85:15.16": "Er betrachtet Wahrnehmung als das Selbst … ",
-  "sn22.85:15.17": "Er betrachtet Entscheidungen als das Selbst … "
+  "sn22.85:15.17": "Er betrachtet Entscheidungen als das Selbst … ",
+  "sn22.85:15.18": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
