Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -117,6 +117,6 @@
   "sn22.85:15.17": "Er betrachtet Entscheidungen als das Selbst … ",
   "sn22.85:15.18": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "sn22.85:16.1": "Er versteht Form, die unbeständig ist, nicht wahrhaftig als unbeständig. ",
-  "sn22.85:16.2": "Er versteht Gefühl, das unbeständig ist … ",
+  "sn22.85:16.2": "Er versteht Gefühl, das unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.85:16.3": "Wahrnehmung, die unbeständig ist … "
 }
