--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -122,5 +122,6 @@
   "sn22.85:16.4": "Er versteht Entscheidungen, die unbeständig sind, nicht wahrhaftig als unbeständig. ",
   "sn22.85:16.5": "Er versteht Bewusstsein, das unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.85:17.1": "Er versteht Form, die Leiden ist, nicht wahrhaftig als Leiden. ",
-  "sn22.85:17.2": "Er versteht Gefühl, das Leiden ist … "
+  "sn22.85:17.2": "Er versteht Gefühl, das Leiden ist … ",
+  "sn22.85:17.3": "Wahrnehmung, die Leiden ist … "
 }
