--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -124,5 +124,6 @@
   "sn22.85:17.1": "Er versteht Form, die Leiden ist, nicht wahrhaftig als Leiden. ",
   "sn22.85:17.2": "Er versteht Gefühl, das Leiden ist … ",
   "sn22.85:17.3": "Wahrnehmung, die Leiden ist … ",
-  "sn22.85:17.4": "Entscheidungen, die Leiden sind … "
+  "sn22.85:17.4": "Entscheidungen, die Leiden sind … ",
+  "sn22.85:17.5": "Bewusstsein, das Leiden ist, nicht wahrhaftig als Leiden. "
 }
