--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -127,5 +127,6 @@
   "sn22.85:17.4": "Entscheidungen, die Leiden sind … ",
   "sn22.85:17.5": "Bewusstsein, das Leiden ist, nicht wahrhaftig als Leiden. ",
   "sn22.85:18.1": "Er versteht Form, die nicht-selbst ist, nicht wahrhaftig als nicht-selbst. ",
-  "sn22.85:18.2": "Er versteht Gefühl, das nicht-selbst ist … "
+  "sn22.85:18.2": "Er versteht Gefühl, das nicht-selbst ist … ",
+  "sn22.85:18.3": "Wahrnehmung, die nicht-selbst ist … "
 }
