--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -129,5 +129,6 @@
   "sn22.85:18.1": "Er versteht Form, die nicht-selbst ist, nicht wahrhaftig als nicht-selbst. ",
   "sn22.85:18.2": "Er versteht Gefühl, das nicht-selbst ist … ",
   "sn22.85:18.3": "Wahrnehmung, die nicht-selbst ist … ",
-  "sn22.85:18.4": "Entscheidungen, die nicht-selbst sind … "
+  "sn22.85:18.4": "Entscheidungen, die nicht-selbst sind … ",
+  "sn22.85:18.5": "Bewusstsein, das nicht-selbst ist, nicht wahrhaftig als nicht-selbst. "
 }
