Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -132,5 +132,6 @@
   "sn22.85:18.4": "Entscheidungen, die nicht-selbst sind … ",
   "sn22.85:18.5": "Bewusstsein, das nicht-selbst ist, nicht wahrhaftig als nicht-selbst. ",
   "sn22.85:19.1": "Er versteht Form, die bedingt ist, nicht wahrhaftig als bedingt. ",
-  "sn22.85:19.2": "Er versteht Gefühl, das bedingt ist … "
+  "sn22.85:19.2": "Er versteht Gefühl, das bedingt ist … ",
+  "sn22.85:19.3": "Wahrnehmung, die bedingt ist … "
 }
