--- a/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
@@ -5,5 +5,6 @@
   "an5.257-263:1.4": "To jest, mnisi, te  pięć właściwości, bez porzucenia których nie ma możliwości doświadczenia Owocu Arahanta.",
   "an5.257-263:2.1": "Mnisi, z porzuceniem pięciu właściwości jest możliwość doświadczenia drugiej jhāny (...) trzeciej jhāny (...) czwartej jhāny (...) Owocu Wchodzącego w Strumień (...) Owocu Razpowracającego (...) Owocu Niepowracającego (...) Owocu Arahanta.",
   "an5.257-263:2.2": "Których pięciu?",
-  "an5.257-263:2.3": "Skąpstwa w odniesieniu do miejsca przebywania, skąpstwa w odniesieniu do rodziny, skąpstwa w odniesieniu do zysku, skąpstwa w odniesieniu do statusu, skąpstwa w odniesieniu do Dhammy."
+  "an5.257-263:2.3": "Skąpstwa w odniesieniu do miejsca przebywania, skąpstwa w odniesieniu do rodziny, skąpstwa w odniesieniu do zysku, skąpstwa w odniesieniu do statusu, skąpstwa w odniesieniu do Dhammy.",
+  "an5.257-263:2.4": "To jest, mnisi, te  pięć właściwości, z porzuceniem których jest możliwość doświadczenia Owocu Arahanta."
 }
