Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -134,5 +134,6 @@
   "sn22.85:19.1": "Er versteht Form, die bedingt ist, nicht wahrhaftig als bedingt. ",
   "sn22.85:19.2": "Er versteht Gefühl, das bedingt ist … ",
   "sn22.85:19.3": "Wahrnehmung, die bedingt ist … ",
-  "sn22.85:19.4": "Entscheidungen, die bedingt sind … "
+  "sn22.85:19.4": "Entscheidungen, die bedingt sind … ",
+  "sn22.85:19.5": "Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. "
 }
