--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -136,5 +136,6 @@
   "sn22.85:19.3": "Wahrnehmung, die bedingt ist … ",
   "sn22.85:19.4": "Entscheidungen, die bedingt sind … ",
   "sn22.85:19.5": "Bewusstsein, das bedingt ist, nicht wahrhaftig als bedingt. ",
-  "sn22.85:20.1": "Er versteht Form, die ein Mörder ist, nicht wahrhaftig als Mörder. "
+  "sn22.85:20.1": "Er versteht Form, die ein Mörder ist, nicht wahrhaftig als Mörder. ",
+  "sn22.85:20.2": "Er versteht Gefühl, das ein Mörder ist … "
 }
