Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -139,5 +139,6 @@
   "sn22.85:20.1": "Er versteht Form, die ein Mörder ist, nicht wahrhaftig als Mörder. ",
   "sn22.85:20.2": "Er versteht Gefühl, das ein Mörder ist … ",
   "sn22.85:20.3": "Wahrnehmung, die ein Mörder ist … ",
-  "sn22.85:20.4": "Entscheidungen, die ein Mörder sind … "
+  "sn22.85:20.4": "Entscheidungen, die ein Mörder sind … ",
+  "sn22.85:20.5": "Bewusstsein, das ein Mörder ist, nicht wahrhaftig als Mörder. "
 }
