--- a/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
@@ -1,4 +1,5 @@
 {
+  "an5.257-263:0.3": "Druga mowa o jhānach",
   "an5.257-263:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości doświadczenia drugiej jhāny (...) trzeciej jhāny (...) czwartej jhāny (...) Owocu Wchodzącego w Strumień (...) Owocu Razpowracającego (...) Owocu Niepowracającego (...) Owocu Arahanta.",
   "an5.257-263:1.2": "Których pięciu?",
   "an5.257-263:1.3": "Skąpstwa w odniesieniu do miejsca przebywania, skąpstwa w odniesieniu do rodziny, skąpstwa w odniesieniu do zysku, skąpstwa w odniesieniu do statusu, skąpstwa w odniesieniu do Dhammy.",
