--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -141,5 +141,6 @@
   "sn22.85:20.3": "Wahrnehmung, die ein Mörder ist … ",
   "sn22.85:20.4": "Entscheidungen, die ein Mörder sind … ",
   "sn22.85:20.5": "Bewusstsein, das ein Mörder ist, nicht wahrhaftig als Mörder. ",
-  "sn22.85:21.1": "Er fühlt sich von Form angezogen, ergreift sie und macht sich die Vorstellung ‚mein Selbst‘ zu eigen. "
+  "sn22.85:21.1": "Er fühlt sich von Form angezogen, ergreift sie und macht sich die Vorstellung ‚mein Selbst‘ zu eigen. ",
+  "sn22.85:21.2": "Er fühlt sich von Gefühl angezogen … "
 }
