Translations by HarDao to translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.257-263_translation-pl-hardao.json
@@ -1,5 +1,6 @@
 {
   "an5.257-263:0.1": "Zbiór mów według wyliczeń 5.257–263",
+  "an5.257-263:0.2": "Rozdział o przyjmowaniu do zakonu",
   "an5.257-263:0.3": "Druga mowa o jhānach",
   "an5.257-263:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości doświadczenia drugiej jhāny (...) trzeciej jhāny (...) czwartej jhāny (...) Owocu Wchodzącego w Strumień (...) Owocu Razpowracającego (...) Owocu Niepowracającego (...) Owocu Arahanta.",
   "an5.257-263:1.2": "Których pięciu?",
