Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -145,5 +145,6 @@
   "sn22.85:21.2": "Er fühlt sich von Gefühl angezogen … ",
   "sn22.85:21.3": "Er fühlt sich von Wahrnehmung angezogen … ",
   "sn22.85:21.4": "Er fühlt sich von Entscheidungen angezogen … ",
-  "sn22.85:21.5": "Er fühlt sich von Bewusstsein angezogen, ergreift es und macht sich die Vorstellung ‚mein Selbst‘ zu eigen. "
+  "sn22.85:21.5": "Er fühlt sich von Bewusstsein angezogen, ergreift es und macht sich die Vorstellung ‚mein Selbst‘ zu eigen. ",
+  "sn22.85:21.6": "Und wenn du dich auf diese fünf mit Ergreifen verbundenen Aggregate eingelassen und sie ergriffen hast, führen sie zu deinem langanhaltenden Unglück und Leiden. "
 }
