Translations by HarDao to translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
@@ -1,3 +1,4 @@
 {
-  "an5.256:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości osiągnięcia i przebywania w pierwszej jhānie."
+  "an5.256:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości osiągnięcia i przebywania w pierwszej jhānie.",
+  "an5.256:1.2": "Których pięciu?"
 }
