Translations by HarDao to translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
@@ -1,4 +1,5 @@
 {
   "an5.256:1.1": "Mnisi, bez porzucenia pięciu właściwości nie ma możliwości osiągnięcia i przebywania w pierwszej jhānie.",
-  "an5.256:1.2": "Których pięciu?"
+  "an5.256:1.2": "Których pięciu?",
+  "an5.256:1.4": "To jest, mnisi, te  pięć właściwości, bez porzucenia których nie ma możliwości osiągnięcia i przebywania w pierwszej jhānie."
 }
