Translations by HarDao to translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an5/an5.256_translation-pl-hardao.json
@@ -6,5 +6,6 @@
   "an5.256:2.1": "Mnisi, z porzuceniem pięciu właściwości jest możliwość osiągnięcia i przebywania w pierwszej jhānie.",
   "an5.256:2.2": "Których pięciu?",
   "an5.256:2.3": "Skąpstwa w odniesieniu do miejsca przebywania, skąpstwa w odniesieniu do rodziny, skąpstwa w odniesieniu do zysku, skąpstwa w odniesieniu do statusu, skąpstwa w odniesieniu do Dhammy.",
-  "an5.256:2.4": "To jest, mnisi, te  pięć właściwości, z porzuceniem których jest możliwość osiągnięcia i przebywania w pierwszej jhānie."
+  "an5.256:2.4": "To jest, mnisi, te  pięć właściwości, z porzuceniem których jest możliwość osiągnięcia i przebywania w pierwszej jhānie.",
+  "an5.256:2.5": "Szósta."
 }
