Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.55_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "sn22.55:8.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.55:8.2": "Er versteht Gefühl, das unbeständig ist … ",
   "sn22.55:8.3": "Wahrnehmung, die unbeständig ist … ",
-  "sn22.55:8.4": "Er versteht Entscheidungen, die unbeständig sind … ",
+  "sn22.55:8.4": "Entscheidungen, die unbeständig sind … ",
   "sn22.55:8.5": "Er versteht Bewusstsein, das unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.55:8.6": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle Leiden sind, wahrhaftig als Leiden. ",
   "sn22.55:8.7": "Er versteht Form … Gefühl … Wahrnehmung … Entscheidungen … Bewusstsein, die alle nicht-selbst sind, wahrhaftig als nicht-selbst. ",
