Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -163,5 +163,6 @@
   "sn22.85:24.2": "Er versteht Gefühl, das Leiden ist … ",
   "sn22.85:24.3": "Wahrnehmung, die Leiden ist … ",
   "sn22.85:24.4": "Entscheidungen, die Leiden sind … ",
-  "sn22.85:24.5": "Bewusstsein, das Leiden ist, wahrhaftig als Leiden. "
+  "sn22.85:24.5": "Bewusstsein, das Leiden ist, wahrhaftig als Leiden. ",
+  "sn22.85:25.1": "Er versteht Form, die nicht-selbst ist, wahrhaftig als nicht-selbst. "
 }
