Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -1,3 +1,4 @@
 {
-  "an11.2:1.1": "Mnisi, ktoś moralny, przestrzegający zasad moralnych, nie musi kierować się intencją:"
+  "an11.2:1.1": "Mnisi, ktoś moralny, przestrzegający zasad moralnych, nie musi kierować się intencją:",
+  "an11.2:1.2": "Oby pojawił się we mnie brak żalu"
 }
