Translations by HarDao to translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -11,5 +11,6 @@
   "an11.2:4.1": "Mnisi, w kimś, kogo umysł przepełniony radosnym uniesieniem nie musi dokonać intencji:",
   "an11.2:4.2": "Niech pojawi się we mnie uspokojenie w ciele.",
   "an11.2:4.3": "To naturalne, mnisi, że w kimś, kogo umysł przepełniony radosnym uniesieniem pojawia się uspokojenie w ciele.",
+  "an11.2:5.1": "Mnisi, w kimś, kogo ciało jest uspokojone, nie musi dokonać intencji:",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
 }
